--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,4 @@
 "runArgs": ["--device=/dev/net/tun"],
 "features": {
-  // ...
-  "ghcr.io/tailscale/codespace": {}
-  // ...
+  "ghcr.io/devcontainers-contrib/features/tailscale:1": {}
 }
