--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,6 @@
-"runArgs": ["--device=/dev/net/tun"],
-"features": {
-  "ghcr.io/devcontainers-contrib/features/tailscale:1": {}
+{
+  "image": "mcr.microsoft.com/devcontainers/universal:2",
+  "features": {
+    "ghcr.io/devcontainers-contrib/features/tailscale:1": {}
+  }
 }
